--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.scoutBuilder" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+<!--    <style name="Theme.scoutBuilder" parent="Theme.AppCompat.DayNight.DarkActionBar">-->
+    <style name="Theme.scoutBuilder" parent="Theme.MaterialComponents.DayNight.DarkActionBar.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +13,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox</item>
+        <!-- AppCompat Switch coloring (Removing Holo colors) -->
+        <item name="colorAccent">@color/accent_color</item>
+        <item name="colorSwitchThumbNormal">@color/colorLightGray</item>
     </style>
 </resources>
